<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipe.RecipeDetailFragment">
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    tools:context=".ui.profile.NewRecipeFragment">

    <TextView
        android:id="@+id/insertRecipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_a_recipe"
        android:textSize="30sp"
        android:textColor="@color/creamColor"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleInput"
        />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/title"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/descriptionInput"
        />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/description"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInput"
        app:layout_constraintBottom_toTopOf="@id/pictureUrlInput"
        />

    <EditText
        android:id="@+id/pictureUrlInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/picture_url"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput"
        app:layout_constraintBottom_toTopOf="@id/videoUrlInput"
        />
    <EditText
        android:id="@+id/videoUrlInput"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/video_url"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pictureUrlInput"
        />

    <TextView
        android:id="@+id/InstructionsText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/instructions"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/videoUrlInput"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instructionsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/InstructionsText"
         />

    <Button
        android:id="@+id/addInstructionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_instruction"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/creamColor"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionsRecyclerView"
        app:layout_constraintBottom_toTopOf="@id/IngredientsText"
        />

    <TextView
        android:id="@+id/IngredientsText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/ingredients_"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/addInstructionButton"
        app:layout_constraintBottom_toTopOf="@id/ingredientsRecyclerView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addInstructionButton"
        />

    <Button
        android:id="@+id/addIngredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient"
        android:backgroundTint="@color/creamColor"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredientsRecyclerView"
        />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/creamColor"
        app:layout_constraintTop_toBottomOf="@id/addIngredientButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>