<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3EEEE"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView2"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:text="@string/welcome"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/logoImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
            android:id="@+id/recipeHubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_the_recipehub"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_you_can_find_the_best_recipes_and_tips_to_enjoy_a_culinary_experience"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:textColor="#80000000"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeHubText"
        android:gravity="center"
         />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:backgroundTint="#A0B34A"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>